# scroutines

./: README.md  pyproject.toml
scroutines/: basicu.py  gene_modules.py  lmm.py  miscu.py  pathu.py  pnmf.py  powerplots.py
